gnuplot: whitespace / formatting changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@70261 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnuplot/Portfile
+++ b/dports/math/gnuplot/Portfile
@@ -1,95 +1,101 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
-PortGroup xcodeversion 1.0
+PortSystem                  1.0
+PortGroup                   xcodeversion 1.0
 
-name			gnuplot
-version			4.4.0
-categories		math science
-maintainers		nomaintainer
-description		A command-driven interactive function plotting program
-long_description	Gnuplot is a command-driven interactive function \
-					plotting program. Plots any number of functions, \
-					built up of C operators, C library functions, and \
-					some things C doesn't have like **, sgn(), etc. \
-					Also support for plotting data files, to compare \
-					actual data to theoretical curves.
-platforms		darwin
-homepage		http://gnuplot.sourceforge.net/
-master_sites	sourceforge
-distfiles-append ${name}-${version}.pdf
-extract.only	${distname}.tar.gz
-checksums		${distname}.tar.gz \
-					md5     e708665bd512153ad5c35252fe499059 \
-					sha1    04a2eede7b2af8e64144aa8ffede6535b7a043b5 \
-					rmd160  ed15fd44d32b0bf610f52b99e2c36cd160cb08a6 \
-				${name}-${version}.pdf \
-					md5 f618b64e3679511a385a7ae25b0cdbc7 \
-					sha1 6107557d3c8d893e8f0f67cd610fc890efc4fbb2 \
-					rmd160 783bf418250dc04ccf41fbdf07dc8202d4c34d00
+name                        gnuplot
+version                     4.4.0
+categories                  math science
+platforms                   darwin
+maintainers                 nomaintainer
 
-depends_lib		port:expat \
-				port:fontconfig \
-				port:gd2 \
-				port:jpeg \
-				port:pdflib \
-				port:libiconv \
-				port:libpng \
-				port:ncurses \
-				port:readline \
-				port:xpm \
-				port:zlib
+description                 A command-driven interactive function plotting program
+
+long_description            Gnuplot is a command-driven interactive function \
+                            plotting program. Plots any number of functions, \
+                            built up of C operators, C library functions, and \
+                            some things C doesn't have like **, sgn(), etc. \
+                            Also support for plotting data files, to compare \
+                            actual data to theoretical curves.
+
+homepage                    http://gnuplot.sourceforge.net/
+master_sites                sourceforge
+distfiles-append            ${name}-${version}.pdf
+extract.only                ${distname}.tar.gz
+checksums                   ${distname}.tar.gz \
+                            md5     e708665bd512153ad5c35252fe499059 \
+                            sha1    04a2eede7b2af8e64144aa8ffede6535b7a043b5 \
+                            rmd160  ed15fd44d32b0bf610f52b99e2c36cd160cb08a6 \
+                            ${name}-${version}.pdf \
+                            md5     f618b64e3679511a385a7ae25b0cdbc7 \
+                            sha1    6107557d3c8d893e8f0f67cd610fc890efc4fbb2 \
+                            rmd160  783bf418250dc04ccf41fbdf07dc8202d4c34d00
+
+depends_lib                 port:expat \
+                            port:fontconfig \
+                            port:gd2 \
+                            port:jpeg \
+                            port:pdflib \
+                            port:libiconv \
+                            port:libpng \
+                            port:ncurses \
+                            port:readline \
+                            port:xpm \
+                            port:zlib
 
 platform darwin {
-	depends_lib-append		port:aquaterm
-	configure.cflags-append	-DDEFAULTTERM='"aqua"'
+    depends_lib-append      port:aquaterm
+    configure.cflags-append -DDEFAULTTERM='"aqua"'
 }
 
-minimum_xcodeversions {9 3.1}
+minimum_xcodeversions       {9 3.1}
 
-configure.args	--with-readline=${prefix} \
-                --with-gd=${prefix} \
-                --with-pdf=${prefix} \
-                --with-png=${prefix} \
-                --with-x \
-				--enable-datastrings --enable-histograms \
-				--infodir='\${prefix}/share/info' \
-				--mandir='\${prefix}/share/man' \
-				--disable-wxwidgets \
-				--without-latex \
-				--without-tutorial \
-				--without-cairo \
-				--without-lua
+configure.args              --with-readline=${prefix} \
+                            --with-gd=${prefix} \
+                            --with-pdf=${prefix} \
+                            --with-png=${prefix} \
+                            --with-x \
+                            --enable-datastrings \
+                            --enable-histograms \
+                            --infodir='\${prefix}/share/info' \
+                            --mandir='\${prefix}/share/man' \
+                            --disable-wxwidgets \
+                            --without-latex \
+                            --without-tutorial \
+                            --without-cairo \
+                            --without-lua
 
-configure.ccache	no
+configure.ccache            no
 
 variant no_x11 {
-	depends_lib-delete		port:xpm
-	configure.args-delete	--with-x
-	configure.args-append	--without-x
+    depends_lib-delete      port:xpm
+    configure.args-delete   --with-x
+    configure.args-append   --without-x
 }
 
 variant wxwidgets description "Enable wxWidgets front-end" {
-	depends_lib-append		port:wxWidgets
-	configure.args-delete	--disable-wxwidgets
-	configure.args-append	--with-wx-config=${prefix}/bin/wx-config
+    depends_lib-append      port:wxWidgets
+    configure.args-delete   --disable-wxwidgets
+    configure.args-append   --with-wx-config=${prefix}/bin/wx-config
 }
 
 variant luaterm description "Enable Lua terminal" {
-	depends_lib-append	port:lua
-	configure.args-delete	--without-lua
-	configure.args-append	--with-lua
+    depends_lib-append      port:lua
+    configure.args-delete   --without-lua
+    configure.args-append   --with-lua
 }
 
 variant tutorial description "Build the tutorial (requires a tex install)" {
-	depends_lib-append		bin:tex:texlive
-	configure.args-delete	--without-tutorial --without-latex
-	configure.args-append	--with-tutorial
+    depends_lib-append      bin:tex:texlive
+    configure.args-delete   --without-tutorial --without-latex
+    configure.args-append   --with-tutorial
 }
 
-destroot.destdir	prefix=${destroot}${prefix}
+destroot.destdir            prefix=${destroot}${prefix}
+
 post-destroot {
-	xinstall -d -m 0755 ${destroot}${prefix}/share/doc/${name}
-	xinstall -m 0644 ${distpath}/${name}-${version}.pdf \
-		${destroot}${prefix}/share/doc/${name}/
+    xinstall -d -m 0755 ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 0644 ${distpath}/${name}-${version}.pdf \
+        ${destroot}${prefix}/share/doc/${name}/
 }
