--- a/dports/audio/aacgain/Portfile
+++ b/dports/audio/aacgain/Portfile
@@ -3,7 +3,7 @@
 PortSystem 		1.0
 
 name	        aacgain	
-version	        1.7
+version	        1.8
 categories		audio
 platforms		darwin
 maintainers		cs.dartmouth.edu:tristan
@@ -16,7 +16,11 @@ homepage		http://altosdesign.com/aacgain/
 master_sites    http://altosdesign.com/aacgain/ \
                 freebsd
 use_bzip2		yes
-checksums		md5 de7a95488dac7c34c45896a4c0772709
+
+checksums       md5     61ce9e648fa1773adb3d4b3c84c6e4ca \
+                sha1    331039c4231e4d85ae878795ce3095dd96dcbfdb \
+                rmd160  8f97121f3797cde45f71839dbe14251b74365ccd
+
 patchfiles      patch-libfaad-common.h
 
 depends_lib	port:mp4v2 port:faad2
