mail/msmtp - update to 1.4.21, ticket #24788 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70264 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/msmtp/Portfile
+++ b/dports/mail/msmtp/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name			msmtp
-version			1.4.18
-revision        1
+version			1.4.21
 categories		mail
 platforms		darwin
 maintainers		mww
@@ -19,7 +18,9 @@ long_description	msmtp is an SMTP client that can be used as an SMTP \
 
 homepage		http://msmtp.sourceforge.net/
 master_sites	sourceforge
-checksums		sha1 f7b42a2a6f4c9c21687dde86dfa827d728a08d76
+checksums		md5     9d764cd9036168f49bc9d6531a7f3dba \
+				sha1    40aabe0c65b8f31d402b2429581178e15f8bfe90 \
+				rmd160  047605c85e0abe4ea8d3d01dc99cd75bbf33e3d0
 use_bzip2		yes
 
 depends_lib		port:openssl port:gettext port:gnutls port:libgcrypt \
