mail/maildrop - update to 2.5.0 and add dependency on libidn since it uses that as well, ticket #23477 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70265 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/maildrop/Portfile
+++ b/dports/mail/maildrop/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			maildrop
-version	 		2.2.0
-revision		2
+version	 		2.5.0
 categories		mail
 maintainers		tnpi.biz:matt
 description		Mail delivery agent (MDA) with filtering abilities
@@ -13,13 +12,13 @@ homepage		http://www.courier-mta.org/maildrop/
 platforms		darwin
 master_sites		sourceforge:courier
 use_bzip2		yes
-checksums		md5 1fd5293c73adb64a01cb3d3e59e54618 \
-			sha1 a6af98724fda72c4d1ebfd6e6f5fc5f38caf9e38 \
-			rmd160 8c715af18693c375ca197450cdb57e39813ea8cd
+checksums		md5     efdd9a1324aa0c5b427a77d305ed5ecb \
+			sha1    e09255dec179d796e55af008a8a536479aec55ac \
+			rmd160  ad7880bace6e6e6135d9bc25aec7397d7ac96837
 configure.args		--mandir=${prefix}/share/man \
 			--with-etcdir=${prefix}/etc \
 			--enable-syslog=1
-depends_lib     	port:pcre port:gdbm
+depends_lib     	port:pcre port:gdbm port:libidn
 
 variant vpopmail description {For use with vpopmail} {
 	configure.args-append	--enable-maildrop-gid=vchkpw
