--- a/dports/lang/python24/Portfile
+++ b/dports/lang/python24/Portfile
@@ -163,6 +163,10 @@ platform darwin 10 {
 	post-configure {
   		reinplace "s|#define _POSIX_C_SOURCE 200112L|#undef _POSIX_C_SOURCE|g" ${worksrcpath}/pyconfig.h
 		reinplace "s|#define _XOPEN_SOURCE 600|#undef _XOPEN_SOURCE|g" ${worksrcpath}/pyconfig.h  
+    
+    patchfiles-append   patch-macosmodule.diff \
+                        patch-mactoolboxglue.diff \
+                        patch-pymactoolbox.diff
 	}
 }
 
