libvpx: fix "virtual memory exhausted" on Tiger during destroot; see #25943
git-svn-id: https://svn.macports.org/repository/macports/trunk@70267 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -51,6 +51,12 @@ configure.env   LD="${configure.cc}"
 #    configure.args-append --enable-install-docs
 #}
 
+platform darwin 8 {
+    # Tiger's make 3.80 experiences "virtual memory exhausted" during destroot
+    depends_build-append port:gmake
+    build.cmd ${prefix}/bin/gmake
+}
+
 build.target
 build.args      verbose=1
 
