--- a/dports/sysutils/di/Portfile
+++ b/dports/sysutils/di/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			di
-version			4.13
+version			4.26
 categories		sysutils
 platforms		darwin
 maintainers		mww
@@ -13,16 +13,19 @@ long_description	di is a disk information utility, displaying everything \
 
 homepage		http://www.gentoo.com/di/
 master_sites	${homepage} http://fresh.t-systems-sfr.com/unix/src/privat2/
-checksums		sha1 6cd254482f6075b83191e58b327516e6701840fb
+
+checksums		md5     7568e18b1c5c72bfbe3d9ba55c30d1ed \
+				sha1    9ea24a64fef957571dada1d53d4cfddce96b8c53 \
+				rmd160  d7513b743291c810154c3d86b002398389143e85
+
+depends_lib		port:gettext
 
 use_configure	no
 
-build.cmd		./Build
 build.target
-build.env		prefix=${prefix}
+build.args		prefix=${prefix} CC="${configure.cc}"
 
-destroot.cmd	${build.cmd}
-destroot.env	prefix=${destroot}${prefix}
+destroot.args	prefix=${destroot}${prefix}
 
 livecheck.type	freshmeat
 livecheck.name	diskinfo
