plplot: commented out error generating part added for 5.9.6 in f95 binding.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70273 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/plplot/Portfile
+++ b/dports/science/plplot/Portfile
@@ -36,7 +36,8 @@ depends_lib     port:expat \
                 port:tk \
                 port:zlib
 
-patchfiles      patch-x18f.f90.diff
+patchfiles      patch-x18f.f90.diff \
+                patch-sfstubsf95.f90.diff
 post-patch {
     reinplace "s|-framework AquaTerm|-F${prefix}/Library/Frameworks -framework AquaTerm|" ${worksrcpath}/cmake/modules/aqt.cmake
 }
