update version, add conflicts and descriptions to variants
git-svn-id: https://svn.macports.org/repository/macports/trunk@70276 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/depot_tools/Portfile
+++ b/dports/devel/depot_tools/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                depot_tools
-version             54528
+version             54894
 categories          devel
 maintainers         snc openmaintainer
 description         Manages interaction with the Chromium development process
@@ -15,15 +15,15 @@ homepage            http://dev.chromium.org/Home
 platforms           darwin
 depends_build       port:git-core
 
-variant python25 {
+variant python25 conflicts python26 python27 description {Use python 2.5} {
     depends_run-append  port:py25-socket-ssl
 }
 
-variant python26 {
+variant python26 conflicts python25 python27 description {Use python 2.6} {
     depends_run-append  port:python26
 }
 
-variant python27 {
+variant python27 conflicts python25 python26 description {Use python 2.7} {
     depends_run-append  port:python27
 }
 
