--- a/dports/security/libyubikey/Portfile
+++ b/dports/security/libyubikey/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                libyubikey
-version             1.5
+version             1.6
 categories          security
 maintainers         snc openmaintainer
 description         Low-level library for decrypting and parsing Yubikey One-Time Passwords (OTP) in C.
@@ -13,8 +13,7 @@ long_description    ${description}
 homepage            http://code.google.com/p/yubico-c/
 platforms           darwin
 master_sites        http://yubico-c.googlecode.com/files/
-checksums           md5     387518eb89c1a9e44cbff95a32edaada \
-                    sha1    c43dbb4210b83338ddf0a61a36091115afd950fe \
-                    rmd160  1ec1c5b68f73d7bb02b34b9a8c86cf510b736836
+checksums           md5     0db791eabcf2ea917317f505907838cf \
+                    sha1    151ea1eba21b9f3137c6d8d7dc30566923c01139
 
 livecheck.regex     "files/${name}-(\\d+\\.\\d+)"
