--- a/dports/office/todotxt/Portfile
+++ b/dports/office/todotxt/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                todotxt
-version             2.6
+version             2.7
 categories          office
 license             GPL
 maintainers         snc openmaintainer
@@ -19,9 +19,8 @@ platforms           darwin
 
 master_sites        http://github.com/downloads/ginatrapani/todo.txt-cli
 distname            todo.txt_cli-${version}
-checksums           md5     1395ed8cdce96ef630c25522a7a11998 \
-                    sha1    ed6491141ac6e55addc06733485f2fe1ff064515 \
-                    rmd160  f54ce343ad6bcf0a3725e9cea0f2a2b23feda7fb
+checksums           md5     b4ef313bbb8f185fe4a21ce07ad6933d \
+                    sha1    f0e45040633a1fb15eae9a47733f8aed03b8f7f9
 
 use_configure       no
 
