Added patches for QAudioInpout and QAudioOutpout; fixes ticket #25831.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70280 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -36,9 +36,15 @@ depends_lib         port:zlib port:dbus port:openssl port:sqlite3 \
                     port:tiff port:libpng port:libmng port:jpeg \
                     port:${select_port}
 
-# Test for Precompiled-headers support requires a C++ compiler,
+# (1) Test for Precompiled-headers support requires a C++ compiler,
 # but configure calls it, by default, with a C compiler.
-patchfiles          patch-precomp.test.diff
+# (rest) Correct QAudioInput and QAudioOutput in QtMultimedia, which
+# will be part of a newer 4.6.X series.
+patchfiles          patch-precomp.test.diff \
+                    patch-qaudio-format-converters.diff \
+                    patch-qaudioinput-conversion.diff \
+                    patch-qaudioinput-readyread.diff \
+                    patch-qaudiooutput-period-size.diff
 
 # The build process uses -fconstant-cfstrings.
 # configure.compiler should therefore not be one of the MacPorts compilers.
