--- a/dports/devel/gradle-devel/Portfile
+++ b/dports/devel/gradle-devel/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name				gradle-devel
-version				0.9-preview-3
+version				0.9-rc-1
 categories			devel java groovy
 maintainers			breskeby
 description			An open-source build system that is based on the Groovy language
@@ -18,9 +18,9 @@ platforms			darwin
 distname			gradle-${version}-bin
 conflicts			gradle
 master_sites		http://dist.codehaus.org/gradle
-checksums 			md5	ddb05ab18021b1ca28d2a8d0a78bdc0a \
-					sha1 1dd646b9499d39c917bdffc5033cff82234420b9 \
-					rmd160 4af07f852eeb8ae6df115ab4f34bfe10c92dc1b4
+checksums 			md5	36b321e6434ea751ac3e7d84e7760f49 \
+					sha1 4d78fd776f842c92c0617da8d6ea1c0fe806322b \
+					rmd160 f59e7ad69021172158e5398f629dd8fe578dfd0f
 						
 worksrcdir			gradle-${version}
 set workTarget		""
@@ -49,7 +49,6 @@ destroot	{
 	# Copy over the needed elements of our directory tree
 	file copy ${worksrcpath}/bin					\
 			  ${worksrcpath}/lib 					\
-			  ${worksrcpath}/gradle-imports 		\
 			  ${worksrcpath}/LICENSE		 		\
 			  ${worksrcpath}/NOTICE		 		\
 			  ${destroot}${prefix}/share/java/gradle
