org-mode: update to v7.01g
git-svn-id: https://svn.macports.org/repository/macports/trunk@70284 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/org-mode/Portfile
+++ b/dports/editors/org-mode/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                org-mode
-version             6.36c
-revision            1
+version             7.01g
 categories          editors
 maintainers         dports
 platforms           darwin
@@ -19,9 +18,9 @@ homepage            http://orgmode.org/
 master_sites        ${homepage}
 distname            org-${version}
 
-checksums           md5     13d7850aab456406ed6781d4d98e5cad \
-                    sha1    56d55f8c751248100aabbc3109495af31ccf277f \
-                    rmd160  bc745e506712619a03f0b296ac606a5cc7ad81c9
+checksums           md5     a06a2377779252a87e1e9876db3a042f \
+                    sha1    c627afb09695e95c43297cdf2a11a1d8221d9631 \
+                    rmd160  92664ec5ae3bd4a9859b5e9924af686f2b512a8f
 
 depends_lib         port:emacs
 depends_build       port:texinfo
