Maintainer update to version 3.2.6. Also changed maintainer email. (#25953)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70286 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nsd/Portfile
+++ b/dports/net/nsd/Portfile
@@ -4,11 +4,11 @@
 PortSystem 1.0
 
 name			nsd
-version			3.2.5
+version			3.2.6
 revision        1
 categories		net
 platforms		darwin
-maintainers		buddhdev.name:anand
+maintainers		gmail.com:arhbkb
 description		Authoritative only, high performance, simple name server.
 long_description	NSD is an authoritative only, high performance, simple and \
 			open source name server.
@@ -18,7 +18,7 @@ set nsdgroup		nsd
 
 homepage		http://www.nlnetlabs.nl/nsd/
 master_sites		http://www.nlnetlabs.nl/downloads/nsd/
-checksums		sha1 90678506145a7a4cf62fbb266013abb8ad464484
+checksums		sha1 7857df4c34a10f63c8100ae806f12f6035397773
 
 depends_lib		port:openssl
 
