judy: fix build on case-sensitive filesystems; see #25951
git-svn-id: https://svn.macports.org/repository/macports/trunk@70287 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/judy/Portfile
+++ b/dports/devel/judy/Portfile
@@ -17,6 +17,7 @@ long_description    Judy is a general purpose dynamic array implemented as a C \
 homepage        http://judy.sourceforge.net/
 master_sites    sourceforge
 distname        Judy-${version}
+worksrcdir      judy-${version}
 
 checksums       md5     115a0d26302676e962ae2f70ec484a54 \
                 sha1    3540f003509acac3b1260424380ddf97914f7745 \
