gd2: always remove -arch flags from gdlib-config, and don't destroy the script when building universal; see #25946
git-svn-id: https://svn.macports.org/repository/macports/trunk@70290 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gd2/Portfile
+++ b/dports/graphics/gd2/Portfile
@@ -6,7 +6,7 @@ PortGroup                   muniversal 1.0
 
 name                        gd2
 version                     2.0.35
-revision                    7
+revision                    8
 categories                  graphics
 maintainers                 ryandesign
 license                     gd
@@ -66,14 +66,18 @@ post-patch {
 
 use_autoreconf              yes
 
-post-build {
+post-configure {
     if {[variant_isset universal]} {
-       foreach arch ${universal_archs_to_use} {
-           reinplace "s| ${configure.universal_ldflags}||" \
-               ${worksrcpath}-${arch}/config/gdlib-config
-           reinplace "s| [muniversal_get_arch_flag ${arch}]||" \
-               ${worksrcpath}-${arch}/config/gdlib-config
-       }
+        set dirs {}
+        foreach arch ${universal_archs_to_use} {
+            lappend dirs ${worksrcpath}-${arch}
+        }
+    } else {
+        set dirs ${worksrcpath}
+    }
+    foreach dir ${dirs} {
+        reinplace -E {s|-arch [a-z0-9_]+||g} \
+            ${dir}/config/gdlib-config
     }
 }
 
