ghostscript: enable universal (#24056)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70296 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem      1.0
+PortGroup       muniversal 1.0
 
 name            ghostscript
 version         8.71
@@ -110,7 +111,7 @@ post-destroot {
 
 livecheck.distname      GPL Ghostscript
 
-universal_variant       no
+configure.universal_args-delete --disable-dependency-tracking
 
 variant no_x11 {
     depends_lib-delete port:xorg-libXext
