slocate: remove mirrors that do not have the distfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@70305 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/slocate/Portfile
+++ b/dports/sysutils/slocate/Portfile
@@ -20,10 +20,7 @@ long_description    Secure locate provides a secure way to index and quickly sea
                     files there.
 platforms           darwin
 maintainers         nomaintainer
-master_sites        http://slocate.trakker.ca/files/ \
-    http://fresh.t-systems-sfr.com/unix/src/misc/ \
-    http://slackware.mirrors.tds.net/pub/slackware/slackware_source/a/slocate/ \
-    http://mirror.nohup.it/slackware/slackware_source/a/slocate/ \
+master_sites        http://slackware.mirrors.tds.net/pub/slackware/slackware_source/a/slocate/ \
     http://slackware.mirrors.pair.com/slackware_source/a/slocate/
 
 checksums           md5 908e6949d959ae7b686c10bb76b35bf3 \
