gimp-gap-devel:     * update to latest git master     * pre-extract embedded ffmpeg source and patch to build properly     * use path dependency to allow either gimp2 or gimp2-devel     * disable x264 support in ffmpeg (latest version not yet supported by gimp-gap)     * default to mplayer-devel for run time dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70306 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-gap-devel/Portfile
+++ b/dports/graphics/gimp-gap-devel/Portfile
@@ -7,7 +7,7 @@ name            gimp-gap-devel
 conflicts       gimp-gap
 set git_name    gimp-gap
 version         2.7.0
-revision        3
+revision        4
 categories      graphics
 maintainers     devans
 
@@ -20,13 +20,30 @@ long_description \
                 leading up to a stable version 2.8.
 
 universal_variant  no
+use_parallel_build no
 
 homepage        http://www.gimp.org/
 platforms       darwin
 
 fetch.type      git
 git.url         git://git.gnome.org/${git_name}
-git.branch      58844b7a
+git.branch      ab07c18b
+
+pre-patch       {
+                    system "cd ${worksrcpath}/extern_libs && gzip -dc ffmpeg.tar.gz | gnutar -xf -"
+                }
+
+patchfiles      patch-extern_libs-configure_options_ffmpeg.txt.diff \
+                patch-ffmpeg-Makefile.diff
+
+post-patch     {
+                   if {$build_arch != ""} {
+                       set ffmpeg_extras "--cc=${configure.cc} --arch=${build_arch}"
+                   } else {
+                       set ffmpeg_extras "--cc=${configure.cc}"
+                   }
+                   reinplace "s|MP_FFMPEG_EXTRAS|${ffmpeg_extras}|" ${worksrcpath}/extern_libs/configure_options_ffmpeg.txt
+               }
 
 depends_build   port:git-core \
                 port:pkgconfig \
@@ -36,20 +53,25 @@ depends_build   port:git-core \
                 port:p5-xml-parser \
                 port:gmake
 
-depends_lib     port:gimp2 \
+depends_lib     path:lib/pkgconfig/gimp-2.0.pc:gimp2 \
                 port:faac \
                 port:faad2 \
-                port:x264 \
                 port:lame \
                 port:XviD
 
-depends_run     port:MPlayer
+#
+# make mplayer-devel the default as MPlayer doesn't build on Snow Leopard
+#
+
+depends_run     path:bin/mplayer:mplayer-devel                
 
 configure.cmd    ./autogen.sh
 
 configure.args  --disable-audio-support \
                 --disable-libmpeg3 \
+                --disable-ff-libx264 \
                 --enable-gdkpixbuf-pview \
+                --with-ffmpegsrcdir=${worksrcpath}/extern_libs/ffmpeg \
                 --with-ff-extra-cflags=-I${prefix}/include \
                 --with-ff-extra-ldflags=-L${prefix}/lib
 
