--- a/dports/graphics/gimp-gap/Portfile
+++ b/dports/graphics/gimp-gap/Portfile
@@ -6,8 +6,10 @@ PortSystem 1.0
 name            gimp-gap
 conflicts       gimp-gap-devel
 version         2.6.0
-revision        3
+revision        4
 set branch      [join [lrange [split ${version} .] 0 1] .]
+set ffmpeg-vers 0.5.2
+set ffmpeg-name ffmpeg-${ffmpeg-vers}
 categories      graphics
 maintainers     devans
 
@@ -19,34 +21,64 @@ long_description \
                 sequences of single frames.
 
 universal_variant  no
+use_parallel_build no
 
 homepage        http://www.gimp.org/
 platforms       darwin
-master_sites    gimp:gimp/plug-ins/v${branch}/gap/
-
-checksums       md5     249ed829de8b78675c0fe4ef4212089f \
-                sha1    5ce9b73de4c992bd2a527197847033e15eb2c346 \
-                rmd160  2121eae37bd02f8e784cd377d1a48515221a97e8
+master_sites    gimp:gimp/plug-ins/v${branch}/gap/:gap \
+                http://www.ffmpeg.org/releases/:ffmpeg
 
 use_bzip2       yes
+
+distfiles       ${distname}${extract.suffix}:gap \
+                ${ffmpeg-name}${extract.suffix}:ffmpeg
+
+checksums       ${distname}${extract.suffix} \
+                    md5     249ed829de8b78675c0fe4ef4212089f \
+                    sha1    5ce9b73de4c992bd2a527197847033e15eb2c346 \
+                    rmd160  2121eae37bd02f8e784cd377d1a48515221a97e8 \
+                ${ffmpeg-name}${extract.suffix} \
+                    md5     451eb428ca97a72c00555d50944cdb24 \
+                    sha1    47baf6a95602e1a0120d2864816b13066c5c3973 \
+                    rmd160  c884f92ead5e5e2e781a1046727d78a041786b35
+
+patchfiles      patch-extern_libs-configure_options_ffmpeg.txt.diff \
+                patch-ffmpeg-Makefile.diff
+
+post-patch     { 
+                   if {$build_arch != ""} {
+                       set ffmpeg_extras "--cc=${configure.cc} --arch=${build_arch}"
+                   } else {
+                       set ffmpeg_extras "--cc=${configure.cc}"
+                   }
+                   reinplace "s|MP_FFMPEG_EXTRAS|${ffmpeg_extras}|" ${worksrcpath}/extern_libs/configure_options_ffmpeg.txt
+               }
 
 depends_build   port:pkgconfig \
                 port:intltool \
                 port:p5-xml-parser \
-                port:gmake
+                port:gmake \
+                port:yasm
 
-depends_lib     port:gimp2 \
+depends_lib     path:lib/pkgconfig/gimp-2.0.pc:gimp2 \
                 port:faac \
                 port:faad2 \
-                port:x264 \
                 port:lame \
-                port:XviD
+                port:XviD \
+                port:bzip2 \
+                port:zlib
 
-depends_run     path:bin/mplayer:MPlayer
+#
+# make mplayer-devel the default as MPlayer doesn't build on Snow Leopard
+#
+
+depends_run     path:bin/mplayer:mplayer-devel                
 
 configure.args  --disable-audio-support \
                 --disable-libmpeg3 \
+                --disable-ff-libx264 \
                 --enable-gdkpixbuf-pview \
+                --with-ffmpegsrcdir=${workpath}/${ffmpeg-name} \
                 --with-ff-extra-cflags=-I${prefix}/include \
                 --with-ff-extra-ldflags=-L${prefix}/lib
 
