gimp-gap-devel: update dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70308 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-gap-devel/Portfile
+++ b/dports/graphics/gimp-gap-devel/Portfile
@@ -51,13 +51,16 @@ depends_build   port:git-core \
                 port:automake \
                 port:intltool \
                 port:p5-xml-parser \
-                port:gmake
+                port:gmake \
+                port:yasm
 
 depends_lib     path:lib/pkgconfig/gimp-2.0.pc:gimp2 \
                 port:faac \
                 port:faad2 \
                 port:lame \
-                port:XviD
+                port:XviD \
+                port:bzip2 \
+                port:zlib
 
 #
 # make mplayer-devel the default as MPlayer doesn't build on Snow Leopard
