slocate: ensure we're UsingTheRightCompiler
git-svn-id: https://svn.macports.org/repository/macports/trunk@70309 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/slocate/Portfile
+++ b/dports/sysutils/slocate/Portfile
@@ -46,6 +46,8 @@ post-patch {
     reinplace "s|__GROUP__|${install.group}|g" ${worksrcpath}/Makefile
 }
 
+build.args          CC="${configure.cc}"
+
 pre-destroot {
     addgroup slocate
 }
