gimp2-devel: enable links to default names for executables.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70310 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp2-devel/Portfile
+++ b/dports/graphics/gimp2-devel/Portfile
@@ -7,6 +7,7 @@ name            gimp2-devel
 conflicts       gimp2
 # please remember to update the gimp metapackage to match
 version         2.7.1
+revision        1
 categories      graphics
 maintainers     devans
 homepage        http://www.gimp.org/
@@ -70,7 +71,9 @@ configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version
                 --without-hal \
                 --without-alsa \
                 --without-gvfs \
-                --without-webkit
+                --without-webkit \
+                --enable-default-binary \
+                --enable-gimp-console
 
 variant no_python description {Disable Python scripts and filters} {
     depends_lib-delete      port:py26-gtk
