net/lftp: Fix permissions on files in ${prefix}/share, #25661 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70315 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/lftp/Portfile
+++ b/dports/net/lftp/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                lftp
 version             4.0.2
-revision        1
+revision            2
 categories          net
 platforms           darwin
 maintainers         gmail.com:yunzheng.hu
@@ -47,7 +47,7 @@ pre-configure {
 post-destroot {
     set docdir ${destroot}${prefix}/share/doc/${name}-${version}
     xinstall -d ${docdir}
-    xinstall -W ${worksrcpath} AUTHORS BUGS ChangeLog COPYING FAQ FEATURES \
+    xinstall -m 644 -W ${worksrcpath} AUTHORS BUGS ChangeLog COPYING FAQ FEATURES \
         NEWS README README.debug-levels README.modules MIRRORS THANKS TODO \
         ${docdir}
     file delete -force "${destroot}${prefix}/lib/charset.alias"
