--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name             tsocks
 version          1.8.4
+revision         1
 categories       net
 maintainers      gmail.com:darren.bane
 description      Transparent SOCKS proxying library
@@ -38,14 +39,14 @@ post-extract {
 
 post-destroot {
 	xinstall -m 755 -d ${destroot}${prefix}/etc
-	xinstall -m 755 ${worksrcpath}/tsocks.conf.simple.example ${destroot}${prefix}/etc/tsocks.conf.sample
+	xinstall -m 644 ${worksrcpath}/tsocks.conf.simple.example ${destroot}${prefix}/etc/tsocks.conf.sample
 
 	xinstall -m 755 -d ${destroot}${prefix}/share/examples/tsocks
-	eval xinstall -m 755 [glob ${worksrcpath}/*.example] ${destroot}${prefix}/share/examples/tsocks
+	eval xinstall -m 644 [glob ${worksrcpath}/*.example] ${destroot}${prefix}/share/examples/tsocks
 
 	xinstall -m 755 -d ${destroot}${prefix}/share/doc/tsocks
 	foreach doc { COPYING ChangeLog FAQ INSTALL TODO } {
-		xinstall -m 755 ${worksrcpath}/${doc} ${destroot}${prefix}/share/doc/tsocks/${doc}
+		xinstall -m 644 ${worksrcpath}/${doc} ${destroot}${prefix}/share/doc/tsocks/${doc}
 }
 }
 
