openfpc: install a sample configuration file instead of the real thing; add notes pointing users to config file
git-svn-id: https://svn.macports.org/repository/macports/trunk@70317 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/openfpc/Portfile
+++ b/dports/security/openfpc/Portfile
@@ -5,6 +5,7 @@ PortGroup           perl5 1.0
 
 name                openfpc
 version             0.1a
+revision            1
 categories          security
 platforms           darwin
 maintainers         yahoo.fr:jul_bsd
@@ -46,9 +47,19 @@ build               {}
 destroot {
     xinstall -m 755 -W ${worksrcpath} ofpc-extract.pl openfpc ${destroot}${prefix}/bin
     xinstall -m 644 -W ${worksrcpath} ofpcParse.pm ${perl5.lib}
-    xinstall -m 644 -W ${worksrcpath} openfpc.conf ${destroot}${prefix}/etc
+    xinstall -m 644 ${worksrcpath}/openfpc.conf ${destroot}${prefix}/etc/openfpc.conf.sample
     
     xinstall -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} README \
         ${destroot}${prefix}/share/doc/${name}
 }
+
+post-activate {
+    if {![file exists ${prefix}/etc/openfpc.conf]} {
+        copy ${prefix}/etc/openfpc.conf.sample ${prefix}/etc/openfpc.conf
+    }
+}
+
+notes "
+To configure ${name}, edit ${prefix}/etc/openfpc.conf
+"
