net/tsocks: Mark nomaintainer; abandoned after 3 weeks timeout on #25661
git-svn-id: https://svn.macports.org/repository/macports/trunk@70318 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -6,7 +6,7 @@ name             tsocks
 version          1.8.4
 revision         1
 categories       net
-maintainers      gmail.com:darren.bane
+maintainers      nomaintainer
 description      Transparent SOCKS proxying library
 long_description \
 	tsocks allows non SOCKS aware applications (e.g \
