net/lftp: Mark nomaintainer; abandoned after 3 weeks timeout on #25661
git-svn-id: https://svn.macports.org/repository/macports/trunk@70319 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/lftp/Portfile
+++ b/dports/net/lftp/Portfile
@@ -7,7 +7,7 @@ version             4.0.2
 revision            2
 categories          net
 platforms           darwin
-maintainers         gmail.com:yunzheng.hu
+maintainers         nomaintainer
 
 description         Sophisticated file transfer program
 long_description    Lftp is a shell-like command line ftp client. It is \
