openfpc: add openmaintainer as originally intended
git-svn-id: https://svn.macports.org/repository/macports/trunk@70320 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/openfpc/Portfile
+++ b/dports/security/openfpc/Portfile
@@ -8,7 +8,7 @@ version             0.1a
 revision            1
 categories          security
 platforms           darwin
-maintainers         yahoo.fr:jul_bsd
+maintainers         yahoo.fr:jul_bsd openmaintainer
 
 description         lightweight full-packet network traffic recorder & buffering tool
 
