plplot: patch-sfstubsf95.f90.diff restricted to g95 on powerpc
git-svn-id: https://svn.macports.org/repository/macports/trunk@70322 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/plplot/Portfile
+++ b/dports/science/plplot/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            plplot
 version         5.9.6
+revision        1
 platforms       darwin
 maintainers     takeshi
 categories      science
@@ -36,8 +37,7 @@ depends_lib     port:expat \
                 port:tk \
                 port:zlib
 
-patchfiles      patch-x18f.f90.diff \
-                patch-sfstubsf95.f90.diff
+patchfiles      patch-x18f.f90.diff
 post-patch {
     reinplace "s|-framework AquaTerm|-F${prefix}/Library/Frameworks -framework AquaTerm|" ${worksrcpath}/cmake/modules/aqt.cmake
 }
@@ -148,6 +148,10 @@ variant g95 conflicts gcc43 gcc44 universal description {Build using g95} {
     depends_lib-append      port:g95
     configure.args-append   -DCMAKE_Fortran_COMPILER=\"${prefix}/bin/g95\" \
                             -DCMAKE_OSX_DEPLOYMENT_TARGET=\"\"
+# Ad hoc fix to enable build of f95 binding by disabling some features
+    if {${os.arch}=="powerpc"} {
+        patchfiles-append       patch-sfstubsf95.f90.diff
+    }
 }
 
 variant octave description {Add support for Octave} {
