Emory Smith relinquishes port maintainership
git-svn-id: https://svn.macports.org/repository/macports/trunk@70325 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-xdebug/Portfile
+++ b/dports/php/php5-xdebug/Portfile
@@ -9,7 +9,7 @@ revision                2
 php5extension.type      zend
 categories-append       net devel
 platforms               darwin freebsd openbsd
-maintainers             gmail.com:emory.smith openmaintainer
+maintainers             nomaintainer
 homepage                http://www.xdebug.org/index.php
 master_sites            http://www.xdebug.org/files/
 
