--- a/dports/php/php5-memcache/Portfile
+++ b/dports/php/php5-memcache/Portfile
@@ -7,7 +7,7 @@ php5extension.setup     memcache 2.2.5 pecl
 revision                3
 categories-append       net devel
 platforms               darwin freebsd openbsd
-maintainers             gmail.com:emory.smith openmaintainer
+maintainers             nomaintainer
 
 description             PHP5 bindings for memcache
 
