php5-odbc: give the choice between using unixodbc and iodbc; see #25967
git-svn-id: https://svn.macports.org/repository/macports/trunk@70329 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-odbc/Portfile
+++ b/dports/php/php5-odbc/Portfile
@@ -17,11 +17,22 @@ checksums                       md5     46f500816125202c48a458d0133254a4 \
                                 sha1    79ea4ee3da3a7542d1e348ac963a5b38bcbb4b6b \
                                 rmd160  60a8aac0d51511ecaf8dcad9d31bdf072c0c99cf
 
-depends_lib-append              port:unixODBC
-
-patchfiles-append               patch-unixODBC.diff
-
-configure.args-append           --with-unixODBC=${prefix} \
-                                --with-pdo-odbc=unixODBC,${prefix}
-
 use_parallel_build              yes
+
+variant iodbc conflicts unixodbc description {Use unixODBC} {
+    depends_lib-append          port:libiodbc
+    patchfiles-append           patch-iODBC.diff
+    configure.args-append       --with-iODBC=${prefix} \
+                                --with-pdo-odbc=iODBC,${prefix}
+}
+
+variant unixodbc conflicts iodbc description {Use iODBC} {
+    depends_lib-append          port:unixODBC
+    patchfiles-append           patch-unixODBC.diff
+    configure.args-append       --with-unixODBC=${prefix} \
+                                --with-pdo-odbc=unixODBC,${prefix}
+}
+
+if {![variant_isset iodbc]} {
+    default_variants +unixodbc
+}
