--- a/dports/www/rasqal/Portfile
+++ b/dports/www/rasqal/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 name                rasqal
 version             0.9.19
-revision        1
+revision            2
 description         Raptor RDF Query Library
 long_description    Rasqal is an open source C library that handles Resource \
                     Description Framework (RDF) query syntaxes, query \
@@ -21,6 +21,7 @@ depends_lib         port:curl \
                     port:libiconv \
                     port:libxml2 \
                     port:libxslt \
+                    port:mpfr \
                     port:openssl \
                     port:raptor \
                     port:zlib
