explicitly use MacPorts' libpng, #23427. no rev bump, fixes build issue only.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70331 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -62,6 +62,9 @@ configure.args-append   ../${distname} \
                         -DLIBEXSLT_LIBRARIES=${prefix}/lib/libexslt.dylib \
                         -DJASPER_INCLUDE_DIR=${prefix}/include \
                         -DJASPER_LIBRARY=${prefix}/lib/libjasper.dylib \
+                        -DPNG_LIBRARY=${prefix}/lib/libpng.dylib \
+                        -DPNG_PNG_INCLUDE_DIR=${prefix}/include \
+                        -DQT_PNG_LIBRARY=${prefix}/lib/libpng.dylib \
                         -DWITH_FAM=OFF
 
 if { [file exists ${destroot}${prefix}/lib/kde4/kspell_aspell.so] } {
