move resolv.conf declaration from plist to config, #25940
git-svn-id: https://svn.macports.org/repository/macports/trunk@70332 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/dnsmasq/Portfile
+++ b/dports/net/dnsmasq/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                dnsmasq
 version             2.55
+revision            1
 categories          net
 license             GPL
 maintainers         snc openmaintainer
@@ -24,11 +25,12 @@ homepage            http://www.thekelleys.org.uk/dnsmasq/doc.html
 platforms           darwin
 depends_build       port:nawk
 
-notes               "A startup item has been generated that will aid in 
-starting ${name} with launchd. It is disabled 
-by default. Execute the following command to start it, 
-and to cause it to launch at startup: 
-\n\nsudo port load ${name}"
+notes               "A startup item has been generated that will aid in\
+                    starting ${name} with launchd. You must specify the\
+                    path to resolv.conf. For your protection, this script\
+                    is disabled by default. Execute the following command\
+                    to start it, and to cause it to launch at startup:\
+                    \n\nsudo port load ${name}"
 
 master_sites        http://www.thekelleys.org.uk/dnsmasq/
 
@@ -40,11 +42,14 @@ patchfiles          patch-src-config.h.diff \
                     patch-Makefile.diff
 post-patch {
     reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/src/config.h
+    reinplace s|#resolv-file=|resolv-file=/etc/resolv.conf| \
+        ${worksrcpath}/dnsmasq.conf.example
 }
 
 use_configure       no
 
 destroot.args       PREFIX=${prefix}
+destroot.keepdirs   ${destroot}${prefix}/var/run
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
@@ -67,8 +72,14 @@ variant no_ipv6 description { Disable IPV6 support } {
 }
 
 post-destroot {
+    # copy configuration file if not previously created
+    if {![file exists ${prefix}/etc/dnsmasq.conf]} {
+        copy ${destroot}${prefix}/etc/dnsmasq.conf.sample \
+            ${destroot}${prefix}/etc/dnsmasq.conf
+    }
+
     # Create the directory that dnsmasq likes to store its pid in.
-    file mkdir ${prefix}/var/run
+    xinstall -d -m 755 ${destroot}${prefix}/var/run
 
     #
     # Set up a launchd item.  The daemondo wrapper is not needed.
@@ -96,8 +107,6 @@ post-destroot {
     puts ${plist} "    <array>"
     puts ${plist} "      <string>${prefix}/sbin/dnsmasq</string>"
     puts ${plist} "      <string>-k</string>"
-    puts ${plist} "      <string>-r</string>"
-    puts ${plist} "      <string>/etc/resolv.conf</string>"
     puts ${plist} "    </array>"
     puts ${plist} "    <key>KeepAlive</key>"
     puts ${plist} "    <dict>"
