--- a/dports/databases/mongodb/Portfile
+++ b/dports/databases/mongodb/Portfile
@@ -9,6 +9,7 @@ version             1.4.4
 license             AGPL-3.0
 categories          databases
 maintainers         nomaintainer
+
 description         High-performance, schema-free document-oriented database
 long_description    ${description}
 
@@ -23,19 +24,22 @@ checksums           md5     2db66dabdbc4e09c28f64aa13b99dfe2 \
                     rmd160  34b095adde58d7a2f3bb56b59547dd3d6ac4ed8f
 
 depends_build       port:scons
-depends_lib         port:boost port:pcre port:spidermonkey port:libpcap \
+depends_lib         port:boost \
+                    port:pcre \
+                    port:spidermonkey \
+                    port:libpcap \
                     port:readline
 
-archcheck.files \
-    lib/libboost_program_options-mt.dylib \
-    lib/libpcap.dylib \
-    lib/libpcre.dylib \
-    lib/libreadline.dylib \
-    lib/libjs.dylib
+archcheck.files     lib/libboost_program_options-mt.dylib \
+                    lib/libpcap.dylib \
+                    lib/libpcre.dylib \
+                    lib/libreadline.dylib \
+                    lib/libjs.dylib
 
 patchfiles          patch-SConstruct.diff
+
 post-patch {
-   reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/SConstruct
+    reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/SConstruct
 }
 
 use_configure       no
@@ -47,8 +51,9 @@ build.target        all mongobridge mongosniff
 destroot.cmd        scons
 destroot.args       ${build.args}
 destroot.destdir    --prefix=${destroot}${prefix}
+
 post-destroot {
-   xinstall -W ${worksrcpath} mongobridge ${destroot}${prefix}/bin
+    xinstall -W ${worksrcpath} mongobridge ${destroot}${prefix}/bin
 }
 
 variant universal {
