mongodb: update to version 1.6.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@70334 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/mongodb/Portfile
+++ b/dports/databases/mongodb/Portfile
@@ -5,7 +5,7 @@ PortGroup           archcheck 1.0
 
 name                mongodb
 epoch               1
-version             1.4.4
+version             1.6.0
 license             AGPL-3.0
 categories          databases
 maintainers         nomaintainer
@@ -19,11 +19,12 @@ homepage            http://www.mongodb.org/
 master_sites        http://downloads.mongodb.org/src/
 distname            ${name}-src-r${version}
 
-checksums           md5     2db66dabdbc4e09c28f64aa13b99dfe2 \
-                    sha1    deb45cafd90f0700add328e0af74adc5f605197b \
-                    rmd160  34b095adde58d7a2f3bb56b59547dd3d6ac4ed8f
+checksums           md5     d09e062b518ce71106652eac0e88a962 \
+                    sha1    9f3b0c90424022a8a1667d25162c67c58800edf9 \
+                    rmd160  26edbeff2940fac6d2b083ce37b28aa468ed0b00
 
 depends_build       port:scons
+
 depends_lib         port:boost \
                     port:pcre \
                     port:spidermonkey \
@@ -44,8 +45,8 @@ post-patch {
 
 use_configure       no
 
-build.args          --usesm --cxx ${configure.cxx}
 build.cmd           scons
+build.args          --usesm --cxx=${configure.cxx}
 build.target        all mongobridge mongosniff
 
 destroot.cmd        scons
