--- a/dports/lang/stklos/Portfile
+++ b/dports/lang/stklos/Portfile
@@ -15,8 +15,8 @@ long_description	STklos is a free Scheme system supporting most of the \
 				can also be compiled as a library and embedded in an \
 				application.
 
-homepage		http://www.stklos.org/
-master_sites		http://www.stklos.org/download/
+homepage		http://www.stklos.net/
+master_sites		${homepage}download/
 checksums		sha1 9e7be62703c36af520b13ac37368d3951878c5c4
 patchfiles		patch-configure.diff
 
